# Perception-RT

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configs/: config.yaml
deploy/: Dockerfile
include/: controller.hpp  gpu.hpp  metrics.hpp  ml_engine.hpp  motion_detector.hpp  output_manager.hpp  pipeline.hpp  types.hpp  util.hpp  vehicle_analytics.hpp
model/: model.py
src/: controller.cpp  gpu.cu  main.cpp  metrics.cpp  ml_engine.cpp  motion_detector.cpp  output_manager.cpp  pipeline.cpp  util.cpp  vehicle_analytics.cpp
tests/: test_main.cpp  test_metrics.cpp  test_ml_engine.cpp  test_motion_detector.cpp  test_output_manager.cpp  test_pipeline.cpp  test_types.cpp  test_util.cpp  test_vehicle_analytics.cpp
